[tool.poetry]
name = "cassandra-synonym-caching"
version = "0.0.1"
description = ""
authors = [
    "Stefano Lottini <stefano.lottini@datastax.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = ">=0.0.325"
openai = "^0.28.1"
tiktoken = "^0.5.1"
cassio = "^0.1.3"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[tool.langserve]
export_module = "cassandra_synonym_caching"
export_attr = "chain"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
