[tool.poetry]
name = "chain-of-note-wiki"
version = "0.0.1"
description = "Implementation of Chain of Note prompting for Wikipedia."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
gigachain = ">=0.0.313, <0.1"
anthropic = "^0.7.0"
wikipedia = "^1.4.0"
langchainhub = "^0.1.14"

[tool.poetry.group.dev.dependencies]
gigachain-cli = ">=0.0.4"
fastapi = "^0.104.0"
sse-starlette = "^1.6.5"

[tool.gigaserve]
export_module = "chain_of_note_wiki"
export_attr = "chain"

[tool.templates-hub]
use-case = "rag"
author = "LangChain"
integrations = ["Anthropic", "Wikipedia", "LangChain Hub"]
tags = ["paper", "prompt-hub"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
