[tool.poetry]
name = "chat-bot-feedback"
version = "0.0.1"
description = "Evaluate your chatbot without human feedback"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.1"
openai = "<2"
langsmith = ">=0.0.54"
langchainhub = ">=0.1.13"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.21"
fastapi = ">=0.104.0,<1"
sse-starlette = "^1.6.5"

[tool.langserve]
export_module = "chat_bot_feedback.chain"
export_attr = "chain"

[tool.templates-hub]
use-case = "evaluation"
author = "LangChain"
integrations = ["OpenAI", "LangSmith"]
tags = ["langsmith"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
