[tool.poetry]
name = "csv-agent"
version = "0.0.1"
description = "Analyze csv data with Pandas and OpenAI"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
gigachain = ">=0.0.325"
openai = "<2"
tiktoken = "^0.5.1"
faiss-cpu = "^1.7.4"
pandas = "^2.1.1"
setuptools = "^68.2.2"
tabulate = "^0.9.0"
pydantic = "<2"
gigachain-experimental = ">=0.0.54"

[tool.poetry.group.dev.dependencies]
gigachain-cli = ">=0.0.21"

[tool.templates-hub]
use-case = "question-answering"
author = "LangChain"
integrations = ["OpenAI", "Pandas"]
tags = ["data", "agents"]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
