[tool.poetry]
name = "docugami-kg-rag"
version = "0.1.0"
description = ""
authors = [
    "Docugami <contact@docugami.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = { git = "https://github.com/docugami/langchain.git", branch = "kgrag/docugami_loader", subdirectory = "libs/langchain" }
openai = "^0.28.1"
tiktoken = ">=0.5.1"
pinecone-client = ">=2.2.4"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
dgml-utils = "^0.2.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[tool.langserve]
export_module = "docugami_kg_rag"
export_attr = "chain"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
