[tool.poetry]
name = "elastic-query-generator"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = ">=0.0.313"
elasticsearch = "^8.10.1"
openai = ">=0.27.9"

[tool.langserve]
export_module = "elastic_query_generator.chain"
export_attr = "chain"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
