[tool.poetry]
name = "extraction-anthropic-functions"
version = "0.1.0"
description = ""
authors = ["Lance Martin <lance@langchain.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = ">=0.0.322"
anthropic = ">=0.5.0"
langchainhub = ">=0.1.13"
langchain-experimental = "^0.0.36"

[tool.langserve]
export_module = "extraction_anthropic_functions"
export_attr = "chain"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"