[tool.poetry]
name = "extraction-anthropic-functions"
version = "0.1.0"
description = "Use Anthropic function calling for tasks like extraction or tagging"
authors = [
    "Lance Martin <lance@langchain.dev>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.1"
anthropic = ">=0.5.0"
langchainhub = ">=0.1.13"
langchain-experimental = ">=0.0.54"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.21"

[tool.langserve]
export_module = "extraction_anthropic_functions"
export_attr = "chain"

[tool.templates-hub]
use-case = "extraction"
author = "LangChain"
integrations = ["Anthropic", "Function Calling"]
tags = ["function-calling", "tagging", "extraction"]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
